--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,7 +8,7 @@
   }
 
   .navbar-logo {
-    color: rgb(248, 226, 226);
+    color: rgb(0, 0, 0);
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -39,19 +39,19 @@
   }
   
   .nav-links {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     padding: 0.5rem 1rem;
   }
   
   .nav-links:hover {
-    background-color: #1888ff;
+    background-color: #4AA96C;
     border-radius: 4px;
     transition: all 0.2s ease-out;
   }
   
   .fa-bars {
-    color: #fff;
+    color: #000;
   }
   
   .nav-links-mobile {
@@ -70,6 +70,7 @@
     .nav-menu {
       display: flex;
       flex-direction: column;
+      justify-content: center;
       width: 100%;
       height: 90vh;
       position: absolute;
@@ -80,7 +81,7 @@
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: #fff;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
@@ -95,7 +96,7 @@
     }
   
     .nav-links:hover {
-      background-color: #1888ff;
+      background-color: #4AA96C;
       border-radius: 0;
     }
   
@@ -117,7 +118,7 @@
     }
   
     .fa-times {
-      color: #fff;
+      color: #000;
       font-size: 2rem;
     }
   
@@ -128,15 +129,15 @@
       margin: 2rem auto;
       border-radius: 4px;
       width: 80%;
-      background: #1888ff;
+      background: #fff;
       text-decoration: none;
-      color: #fff;
+      color: #000;
       font-size: 1.5rem;
     }
   
     .nav-links-mobile:hover {
       background: #fff;
-      color: #1888ff;
+      color: #4AA96C;
       transition: 250ms;
     }
   
