--- a/client/src/components/LogInAdmin/login.css
+++ b/client/src/components/LogInAdmin/login.css
@@ -1,11 +1,3 @@
-.boxcontainer {
-    position: relative;
-    top: 4em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .boxteam {
     width: 320px;
     height: auto;
@@ -21,12 +13,13 @@
     display: flex;
     top: 0em;
     height: 2em;
-    background-color: rgb(0, 114, 38);
+    background-color: #4AA96C;
     align-items: center;
     justify-content: center;
     color: white;
     font-weight: bold;
     margin-bottom: 1em;
+    border-radius:5px;
 }
 
 .logsub {
