--- a/client/src/views/admin/dashboard.css
+++ b/client/src/views/admin/dashboard.css
@@ -2,5 +2,20 @@
     display: flex;
     width: 100%;
     align-items: center;
+    justify-content:space-around;
+    border:4px solid greenyellow;
+}
+
+.boxdash {
+    display: flex;
+    flex-direction: column;
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.boxorders {
+    width: 750px;
+    align-items: center;
     justify-content: center;
 }
