--- a/client/src/components/productsAdmin/products.css
+++ b/client/src/components/productsAdmin/products.css
@@ -1,12 +1,13 @@
 .listproducts {
     display: flex;
     flex-direction: column;
-    width: 750px;
+    width: 75vw;
     margin-left: auto;
     margin-right: auto;
 }
 
 .addback {
+    display: flex;
     width: 100%;
     align-items: center;
     justify-content: space-around;
@@ -21,4 +22,12 @@ span {
     height: auto;
     margin-left: auto;
     margin-right: auto;
+}
+
+.renglon {
+    display: flex;
+    border: 1px solid;
+    width: auto;
+    align-content: center;
+    justify-content: space-between;
 }
