--- a/client/src/components/productsAdmin/products.css
+++ b/client/src/components/productsAdmin/products.css
@@ -20,7 +20,7 @@ span {
 .imageup {
     display: flex;
     flex-direction: column;
-    width: 85vw;
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
 }
