--- a/client/src/views/admin/dashboard.css
+++ b/client/src/views/admin/dashboard.css
@@ -9,7 +9,7 @@
 .boxdash {
     display: flex;
     flex-direction: column;
-    width: 750px;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
