--- a/client/src/components/productsAdmin/products.css
+++ b/client/src/components/productsAdmin/products.css
@@ -13,6 +13,14 @@
     justify-content: space-around;
 }
 
+.addbackhead {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
 span {
     font-weight: 500;
 }
@@ -46,4 +54,22 @@ span {
     width: 75vw;
     margin-left: auto;
     margin-right: auto;
+}
+
+.textlist {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 640px) {
+    .textlist {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
+    }
+    .addback {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: space-around;
+    }
 }
