--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -10,6 +10,7 @@
 .navbar-logo {
   color: rgb(0, 0, 0);
   justify-self: start;
+  top:0px;
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
@@ -29,13 +30,14 @@
   text-align: center;
    width: 70vw;
   justify-content: end;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
 }
 
 .nav-item {
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 30px;  
+/*   height: 80px; */
 }
 
 .nav-links {
@@ -74,7 +76,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    /* top: 80px; */
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -104,7 +106,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(10%, 50%);
   }
 
   .menu-icon {
@@ -145,3 +147,16 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 360px) {
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 1.35rem;
+    transform: translate(0%, 80%);
+  }
+
+}
+
