--- a/client/src/components/productCard/productCard.css
+++ b/client/src/components/productCard/productCard.css
@@ -5,6 +5,7 @@
     top:-10px;
     right:-10px;
 }
+
 .cartItem:before {
       content:'1';
       display:block;
@@ -18,4 +19,12 @@
       border-radius:20px;
       text-align:center;
   }
+
+.imageItem {
+    display: flex;
+    width: 75%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
   
