--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -76,7 +76,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    /* top: 80px; */
+     top: 80px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -114,7 +114,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
+    transform: translate(-100%, 40%);
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -148,14 +148,29 @@
   }
 }
 
+/* pensada en mi celu de 5" */
 @media screen and (max-width: 360px) {
+
+  .navbar {
+    height: 50px;
+  }
 
   .navbar-logo {
     position: absolute;
     top: 0;
     left: 0;
     font-size: 1.35rem;
-    transform: translate(0%, 80%);
+    transform: translate(0%, 15%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 0%);
+    font-size: 1.8rem;
+    cursor: pointer;
   }
 
 }
