--- a/client/src/components/OrdersAdmin/orderAdmin.css
+++ b/client/src/components/OrdersAdmin/orderAdmin.css
@@ -1,7 +1,7 @@
 .contenOrder {
     display: flex;
     flex-direction: column;
-    width: 750px;
+    width: 85vw;
     height: 500px;
     margin-left: auto;
     margin-right: auto;
@@ -25,3 +25,22 @@
     text-shadow: 1px 2px 3px lightseagreen;
 }
 
+.orderLineProduct {
+    display: flex;
+    align-content:center;
+    justify-content:flex-start;
+}
+
+.imageProduct {
+    display: flex;
+    border-radius: 100%;
+    width: 48px;
+    height: auto;
+}
+
+@media screen and (max-width: 340px) {
+
+    .imageProduct {
+        display: none;
+    }
+}
