--- a/client/src/views/admin/dashboard.css
+++ b/client/src/views/admin/dashboard.css
@@ -23,7 +23,7 @@
 .contentOrders {
     display: flex;
     flex-wrap: wrap;
-    width: 80%;
+    width: 90%;
     border: 2px dashed greenyellow;
     margin:auto
 }
@@ -31,8 +31,18 @@
 .boxOrder {
     display: flex;
     flex-wrap: wrap;
-    width: 350px;
+    width: 370px;
     margin: auto;
-    height: 350px;
+    height: 425px;
     overflow: auto;
+}
+
+.boxTitleOrder {
+    display: flex;
+    height: 2em;
+    width: 100%;
+    background-color: forestgreen;
+    color: ghostwhite;
+    align-items: center;
+    justify-content: center;
 }
