--- a/client/src/components/OrdersAdmin/orderAdmin.css
+++ b/client/src/components/OrdersAdmin/orderAdmin.css
@@ -38,6 +38,15 @@
     height: auto;
 }
 
+.importePedido {
+    display: flex;
+    justify-content: right;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    font-weight: bolder;
+    color: forestgreen;
+}
+
 @media screen and (max-width: 340px) {
 
     .imageProduct {
