--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -159,8 +159,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 1.35rem;
-    transform: translate(0%, 15%);
+    font-size: 1.5rem;
+    transform: translate(0%, 35%);
   }
 
   .menu-icon {
@@ -168,7 +168,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 0%);
+    transform: translate(-100%, 20%);
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -180,10 +180,18 @@
     width: 100%;
     height: 95vh;
     position: absolute;
-     top: 65px;
+    top: 65px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
   }
+
+  .nav-links {
+    text-align: center;
+    padding: .5rem;
+    width: 100%;
+    display: table;
+  }
+
 }
 
