--- a/client/src/components/productCard/productCard.css
+++ b/client/src/components/productCard/productCard.css
@@ -1,30 +1,29 @@
-.cartItem {
-    position:absolute;
-    height:24px;
-    width:24px;
-    top:-10px;
-    right:-10px;
+.card{
+    border-radius: 20px;
+    transition: transform .3s;
 }
 
-.cartItem:before {
-      content:'1';
-      display:block;
-      line-height:24px;
-      height:24px;
-      width:24px;
-      font-size:12px;
-      font-weight:600;
-      background:#2bd156;
-      color:white;
-      border-radius:20px;
-      text-align:center;
-  }
-
-.imageItem {
-    display: flex;
-    width: 75%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
+.card:hover{
+    transform: translateY(-15px);
+    transition: transform .3s;
 }
-  
+
+.cost span{
+    color:#F55C47;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.buttonprod{
+    background-color:#F55C47;
+}
+
+.buttonprod:hover{
+    opacity: .8;
+}
+
+.cursor{
+    cursor:pointer;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
