Agrupando por categoría

--- a/client/src/components/productCard/productCard.css
+++ b/client/src/components/productCard/productCard.css
@@ -27,3 +27,24 @@
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+
+.anchoimg {
+    width: 160px;
+}
+
+/* para resolución pequeña que entren 2 productos por fila */
+@media screen and (max-width: 440px) {
+
+    .anchoimg {
+        width: 110px;
+        height: 90px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+
+    .anchoimg {
+        width: 90px;
+        height: 70px;
+    }
+}
