--- a/client/src/components/productCard/productCard.css
+++ b/client/src/components/productCard/productCard.css
@@ -1,4 +1,6 @@
 .card{
+/*     border:none;
+    outline:none; */
     border-radius: 20px;
     transition: transform .3s;
 }
@@ -24,6 +26,7 @@
 
 .cursor{
     cursor:pointer;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-radius: 20px;
+   /*  border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px; */
 }
