--- a/client/src/views/carrito/carrito.css
+++ b/client/src/views/carrito/carrito.css
@@ -61,6 +61,7 @@ th:last-child{
 
 .buttonQuant {
     display: flex;
-    border-radius: 1em;    
+    border-radius: 50%; 
+    background-color:grey;   
 }
 
