--- a/client/src/components/productCard/productCard.css
+++ b/client/src/components/productCard/productCard.css
@@ -26,7 +26,7 @@
 
 .cursor{
     cursor:pointer;
-    border-radius: 20px;
-   /*  border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px; */
+/*     border-radius: 20px;*/   
+ border-bottom-left-radius: 20px;
+ border-bottom-right-radius: 20px;
 }
