--- a/client/src/views/carrito/cart.css
+++ b/client/src/views/carrito/cart.css
@@ -24,3 +24,10 @@
     font-weight:500;
     font-size: 16px;
 }
+
+.totalview {
+    display: flex;
+    font-size: x-large;
+    color: forestgreen;
+    font-weight: bolder;
+}
