--- a/client/src/views/carrito/cart.css
+++ b/client/src/views/carrito/cart.css
@@ -8,21 +8,21 @@
 }
 
 .prod-title{
-    font-weight:200;
+    font-weight:500;
     font-size:14px;
     margin-bottom: 40px;  
 }
 
 .sum{
     color:green;
-    font-weight:100;
-    font-size: 12px;
+    font-weight:300;
+    font-size: 1em;
 }
 
 .result{
     color:red;
     font-weight:500;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .totalview {
