--- a/client/src/views/carrito/cart.css
+++ b/client/src/views/carrito/cart.css
@@ -10,7 +10,7 @@
 .prod-title{
     font-weight:500;
     font-size:14px;
-    margin-bottom: 40px;  
+    margin-bottom: 40px;
 }
 
 .sum{
@@ -30,4 +30,11 @@
     font-size: x-large;
     color: forestgreen;
     font-weight: bolder;
+}
+
+.length{
+    overflow: hidden;
+    max-width: 20ch;
+    text-overflow: ellipsis;
+    white-space: nowrap;   
 }
