Alert no encontrado

--- a/client/src/components/checkout/meli.css
+++ b/client/src/components/checkout/meli.css
@@ -21,5 +21,6 @@
 button.mercadopago-button {
     display: flex;
     margin: 1em auto;
-    width: 100px
+    width: 100px;
+    text-transform: uppercase;
   }
