--- a/client/src/components/checkout/meli.css
+++ b/client/src/components/checkout/meli.css
@@ -1,4 +1,4 @@
-.products{
+/* .products{
     border-radius: 5px;
     border: 1px solid rgb(44, 126, 3);
     height: 130px;
@@ -16,7 +16,7 @@
 .ul{
     list-style-type: none;
     padding-right: 50px;
-} 
+}  */
 
 button.mercadopago-button {
     display: flex;
