--- a/client/src/components/productsAdmin/products.css
+++ b/client/src/components/productsAdmin/products.css
@@ -27,7 +27,7 @@ span {
 .imageup {
   display: flex;
   flex-direction: column;
-  width: 85%;
+  /* width: 85%; */
   margin-left: auto;
   margin-right: auto;
 }
