--- a/client/src/components/OrdersAdmin/orderAdmin.css
+++ b/client/src/components/OrdersAdmin/orderAdmin.css
@@ -44,7 +44,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
     font-weight: bolder;
-    color: forestgreen;
+    color: red;
 }
 
 @media screen and (max-width: 340px) {
